--- a/new_pages/collaboration.Rmd
+++ b/new_pages/collaboration.Rmd
@@ -671,7 +671,7 @@ you were working on.
 *PULL* - First, click the "Pull" icon (downward arrow) which fetches and
 pulls at the same time.
 
-*PUSH* - Clicking the green "Pull" icon (upward arrow). You may be asked
+*PUSH* - Clicking the green "Push" icon (upward arrow). You may be asked
 to enter your Github username and password. The first time you are
 asked, you may need to enter two Git command lines into the *Terminal*:
 
@@ -731,7 +731,7 @@ Without surprise, the commands are *fetch*, *pull* and *push*.
 ```{bash, eval = FALSE}
 git fetch  # are there new commits in the remote directory?
 git pull   # Bring remote commits into your local branch
-git push   # Puch local commits of this branch to the remote branch
+git push   # Push local commits of this branch to the remote branch
 ```
 
 
@@ -784,11 +784,11 @@ knitr::include_graphics(here::here("images", "github_desktop_merge.png"))
 ### In console {.unnumbered}
 
 First move back to the branch that will be the recipient of the changes.
-This is usually *master*, but it could be another branch. Then merge your
-working branch into master.
+This is usually *main*, but it could be another branch. Then merge your
+working branch into main.
 
 ```{bash, eval = FALSE}
-git checkout master  # Go back to master (or to the branch you want to move your )
+git checkout main  # Go back to main (or to the branch you want to move your )
 git merge this_fancy_new_branch
 ```
 
@@ -802,7 +802,7 @@ happening behind the scenes.
 
 While it is totally possible to merge two branches locally, or without
 informing anybody, a merge may be discussed or investigated by several
-people before being integrated to the master branch. To help with the
+people before being integrated to the main branch. To help with the
 process, Github offers some discussion features around the merge: the
 **pull request**.
 
@@ -870,13 +870,13 @@ knitr::include_graphics(here::here("images", "github_conflict3.png"))
 
 The text between *\<\<\<\<\<\<\< HEAD* and *=======* comes from your
 local repository, and the one between *=======* and *\>\>\>\>\>\>\>* from the
-the other branch (which may be origin, master or any branch of
+the other branch (which may be origin, main or any branch of
 your choice).
 
 You need to decide which version of the code you prefer (or even write a
 third, including changes from both sides if pertinent), delete the rest
 and remove all the marks that Git added *(\<\<\<\<\<\<\< HEAD, =======,
-\>\>\>\>\>\>\> origin/master/your_branch_name*). 
+\>\>\>\>\>\>\> origin/main/your_branch_name*). 
 
 Then, save the file, stage it and commit it : this is the commit 
 that makes the merged version "official". Do not forget to push afterwards.
