--- a/new_pages/basics.Rmd
+++ b/new_pages/basics.Rmd
@@ -6,7 +6,7 @@ knitr::include_graphics(here::here("images", "basics_header_close.png"))
 
 Welcome!
 
-Esta página analisa o essencial do R. Não pretende ser um tutorial abrangente, mas fornece o básico e pode ser útil para refrescar a sua memória. A secção sobre Recursos para a aprendizagem contém links para tutoriais mais abrangentes.
+This page reviews the essentials of R. It is not intended to be a comprehensive tutorial, but it provides the basics and can be useful for refreshing your memory. The section on [Resources for learning](#learning) links to more comprehensive tutorials.
 
 Parts of this page have been adapted with permission from the [R4Epis project](https://r4epis.netlify.app/).
 
