Update to Applied Epi logo, and add Google Analytics tag

--- a/index.Rmd
+++ b/index.Rmd
@@ -82,7 +82,7 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 
 ::: {}
 ```{r, out.width = "100%", fig.align = "center", echo=F}
-knitr::include_graphics(here::here("images", "epiRhandbook_HexSticker_500x500.png"))
+knitr::include_graphics(here::here("images", "Applied_Epi_logo.png"))
 ```
 :::
 
@@ -96,7 +96,7 @@ a column separator -->
 ::: {}
 <span style="color: black;">**Written by epidemiologists, for epidemiologists**</span>
 
-We are applied epis from around the world, writing in our spare time to offer this resource to the community. Your encouragement and feedback is most welcome:  
+Applied Epi is a non-profit organisation and grassroots movement of epis from around the world. We write in our spare time to offer this resource to the community. Your encouragement and feedback is most welcome:  
 
 * Structured **[feedback form](https://forms.gle/A5SnRVws7tPD15Js9)**  
 * Email **epiRhandbook@gmail.com** or tweet **[\@epiRhandbook](https://twitter.com/epirhandbook)**  
