--- a/new_pages/gis.Rmd
+++ b/new_pages/gis.Rmd
@@ -513,7 +513,7 @@ linelist_sf_hf_2k <- linelist_sf_hf %>%
   select(case_id, osm_id.x, nearest_clinic, amenity.x, osm_id.y)
 ```
 
-Now we can count the results: ` nrow(linelist_sf_hf_2k[is.na(linelist_sf_hf_2k$osm_id.y),])` out of 1000 cases did not intersect with any buffer (that value is missing), and so live more than 30 mins walk from the nearest health facility.
+Now we can count the results: `r nrow(linelist_sf_hf_2k[is.na(linelist_sf_hf_2k$osm_id.y),])` out of 1000 cases did not intersect with any buffer (that value is missing), and so live more than 30 mins walk from the nearest health facility.
 
 ```{r}
 # Cases which did not get intersected with any of the health facility buffers
