Minor fix to origin date line

--- a/new_pages/dates.Rmd
+++ b/new_pages/dates.Rmd
@@ -222,7 +222,7 @@ linelist <- linelist %>%
 <!-- ======================================================= -->
 ## Excel dates
 
-In the background, most software store dates as numbers. R stores dates from an origin of 1st January, 1970. Thus, if you run `as.numeric(as.Date("1970-01-01))` you will get `0`. 
+In the background, most software store dates as numbers. R stores dates from an origin of 1st January, 1970. Thus, if you run `as.numeric(as.Date("1970-01-01"))` you will get `0`. 
 
 Microsoft Excel stores dates with an origin of either December 30, 1899 (Windows) or January 1, 1904 (Mac), depending on your operating system. See this [Microsoft guidance](https://docs.microsoft.com/en-us/office/troubleshoot/excel/1900-and-1904-date-system) for more information.  
 
