--- a/_main.Rmd
+++ b/_main.Rmd
@@ -4293,7 +4293,7 @@ options(scipen=1, digits=7)
 
 
 ```{r, out.height = "10%", fig.align = "center", echo=F}
-knitr::include_graphics(here::here("images", "cleaning.png"))
+knitr::include_graphics(here::here("images", "data_cleaning.png"))
 ```
 
 
