--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -2,7 +2,7 @@
 
 
 ```{r, out.height = "10%", fig.align = "center", echo=F}
-knitr::include_graphics(here::here("images", "cleaning.png"))
+knitr::include_graphics(here::here("images", "data_cleaning.png"))
 ```
 
 
